--- a/zowe-release-v1-template.json
+++ b/zowe-release-v1-template.json
@@ -2,7 +2,7 @@
     "zowe" : {
         "from" : "libs-snapshot-local",
         "to" : "libs-release-local",
-        "path" : "/org/zowe/{ZOWE_ARTIFACT_DIR}",
+        "path" : "org/zowe/{ZOWE_ARTIFACT_DIR}",
         "filesAtSource": {
             "zowe-*.pax": "zowe-*.pax",
             "zowe-smpe-*.zip": "zowe-smpe-*.zip",
@@ -19,7 +19,7 @@
     "zowe-cli" : {
         "from" : "libs-release-local",
         "to" : "libs-release-local",
-        "path" : "/org/zowe/cli",
+        "path" : "org/zowe/cli",
         "filesAtSource": {
             "zowe-cli-package-1*.zip": "zowe-cli-package-1*.zip",
             "zowe-cli-plugins-1*.zip": "zowe-cli-plugins-1*.zip"
@@ -30,7 +30,7 @@
     "zowe-cli-sdk" : {
         "from" : "libs-release-local",
         "to" : "libs-release-local",
-        "path" : "/org/zowe/sdk",
+        "path" : "org/zowe/sdk",
         "filesAtSource": [
             "zowe-nodejs-sdk-typedoc-*.zip",
             "zowe-python-sdk-*.zip",
