--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ on:
         default: '214'
       zowe-release-version:
         description: 'ZOWE_RELEASE_VERSION'
-        default: '1.27.0-RC9'
+        default: '1.99.0'
         required: true
       force-sign:
         type: boolean
@@ -54,7 +54,7 @@ jobs:
           echo "Current zowe-release-v1.json is:"
           cat zowe-release-v1.json
 
-      - name: 'Validate zowe release version input'
+      - name: '[Validate 1] Validate zowe release version input'
         run: |
           zowe_release_version="${{ github.event.inputs.zowe-release-version }}"
           echo "Checking if $zowe_release_version is a valid semantic version ..."
@@ -72,11 +72,20 @@ jobs:
             echo ">>>> Version $zowe_release_version is NOT considered as a FORMAL RELEASE."
           fi
 
-      - name: 'Validate zowe artifacts'
+      - name: '[Validate 2] Validate zowe artifacts'
         uses: ./validate
         with:
           build-name: ${{ github.event.inputs.zowe-build-name }}
           build-num: ${{ github.event.inputs.zowe-build-number }}
           release-version: ${{ github.event.inputs.zowe-release-version }}
-        env:
-          DEBUG: 'zowe-release:validate'
+        # env:
+        #   DEBUG: 'zowe-release:validate'
+
+      - name: 'Generate source build - formal release only!'
+        timeout-minutes: 10
+        if: env.IS_FORMAL_RELEASE == true
+        run: |
+          export GITHUB_USERNAME=${{ secrets.ZOWE_ROBOT_USER }} 
+          export GITHUB_PASSWORD=${{ secrets.ZOWE_ROBOT_TOKEN }} 
+          ./prepare_source_zip.sh
+          zip -r .release/zowe_sources-${{ github.event.inputs.zowe-release-version }}.zip .release/source_zip
