--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,13 +61,13 @@ jobs:
           # validate release version scheme
           # thanks semver/semver, this regular expression comes from
           # https://github.com/semver/semver/issues/232#issuecomment-405596809
-          if [[ "$zowe_release_version" =~ ^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$ ]]; then
+          if [[ "$zowe_release_version" =~ ^([0-9]*)\.([0-9]*)\.([0-9]*)(?:-((?:[0-9]*|*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:[0-9]*|*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$ ]]; then
             echo "$zowe_release_version is not a valid semantic version."
             exit 1
           else
             echo "YES!"
           fi
-          if [[ "$zowe_release_version" =~ ^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)$ ]]; then
+          if [[ "$zowe_release_version" =~ ^([0-9]*)\.([0-9]*)\.([0-9]*)$ ]]; then
             echo IS_FORMAL_RELEASE="true" >> $GITHUB_ENV
             echo ">>>> Version $zowe_release_version is considered as a FORMAL RELEASE."
           else
