--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ on:
         default: '214'
       zowe-release-version:
         description: 'ZOWE_RELEASE_VERSION'
-        default: '1.99.0'
+        default: '1.9999999.9999999'
         required: true
       force-sign:
         type: boolean
