--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/zowe/zowe-release#readme",
   "dependencies": {
     "@actions/core": "^1.6.0",
+    "@actions/github": "^5.0.0",
     "debug": "^4.3.2",
     "zowe-common": "github:zowe-actions/zowe-common"
   }
