--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,6 +90,6 @@ jobs:
       # file name will be: release-artifacts-download-spec.json
 
       - name: 'Download released artifacts'
-      - run: |
+        run: |
           mkdir -p .release
           jfrog rt download --spec ${{ env.RELEASE_ARTIFACTS_DOWNLOAD_SPEC_FILE }}
