--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,6 +90,7 @@ jobs:
       # file name will be: release-artifacts-download-spec.json
 
       - name: 'Download released artifacts'
+        timeout-minutes: 20
         run: |
           GREEN='\033[0;32m'
           RED='\033[0;31m'
@@ -97,10 +98,11 @@ jobs:
           mkdir -p .release
           success_count=$(jfrog rt download --threads 10 --spec ${{ env.RELEASE_ARTIFACTS_DOWNLOAD_SPEC_FILE }} | jq -r ".totals.success")
           if [[ -z "$success_count" ]] || [[ "$success_count" != "9" ]]; then
-            printf "${RED}\nmissing some release artifacts, I have only found $success_count ${NC}"
+            echo -e "${RED}\nmissing some release artifacts, I have only found $success_count"
             exit 1
           else
-            printf "${GREEN}\n I have downloaded $success_count artifacts, looks okay, may proceed. ${NC}"
+            echo
+            echo -e "${GREEN}I have downloaded $success_count artifacts, looks okay, may proceed.${NC}\n"
           fi
 
 
