--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,10 +26,12 @@ on:
         type: boolean
         description: 'Force sign'
         required: false
+        default: 'false'
       force-tag:
         type: boolean
         description: 'Force tag'
         required: false
+        default: 'false'
 
 env:
   ZOWE_INSTALL_PACKAGING_REPO: zowe/zowe-install-packaging
@@ -122,7 +124,7 @@ jobs:
       #     fi
       
       - name: 'Sign - formal release only!'
-        if: ${{ env.IS_FORMAL_RELEASE == 'true' || github.event.inputs.force-sign == true }}
+        if: ${{ env.IS_FORMAL_RELEASE == 'true' || github.event.inputs.force-sign == 'true' }}
         timeout-minutes: 20
         run: echo "HAHAHAHAHA"
       #   uses: ./sign
