--- a/sign/action.yml
+++ b/sign/action.yml
@@ -1,12 +1,12 @@
 name: "Sign"
 description: "Sign zowe artifacts"
 inputs:
-  # promote-json-file-name-full:
-  #   description: the promote spec json file name
-  #   required: true
-  # release-version:
-  #   description: zowe release version
-  #   required: true
+  promote-json-file-name-full:
+    description: the promote spec json file name
+    required: true
+  release-version:
+    description: zowe release version
+    required: true
 
 # outputs:
   
