--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -142,5 +142,5 @@ jobs:
       - name: test
         run: |
           echo "${{ secrets.GPG_PRIVATE_KEY }}" > private.key
-          gpg --batch --passphrase "${{ secrets.GPG_KEY_PASSPHRASE }}" --import private.key
+          gpg --allow-secret-key-import --batch --passphrase "${{ secrets.GPG_KEY_PASSPHRASE }}" --import private.key
           gpg --list-keys
