--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -167,7 +167,7 @@ jobs:
           RED='\033[0;31m'
           NC='\033[0m'
           expected_artifacts_count=${{ env.CORRECT_NUM_OF_SIGNED_ARTIFACTS }}
-          if [[ "${{ env.IS_FORMAL_RELEASE }}" == 'true' ]]; then
+          if [[ -z "${{ env.IS_FORMAL_RELEASE }}" ]]; then
             ((expected_artifacts_count--))
           fi
           success_count=$(jfrog rt upload --threads 10 --spec ${{ steps.sign.outputs.SIGN_JSON_FILE_NAME_FULL }} | jq -r ".totals.success")
